vite-project/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  labels:
    app: react-app
spec:
  replicas: 1  # You can scale up or down as needed
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app
          image: kubernetesappdevelopment.azurecr.io/myreact-app:latest  # Replace with your ACR image path
          ports:
            - containerPort: 4173  # React app will be served on port 80 by Nginx
